--- a/accountapp/templates/accountapp/listsnippets/navbar.html
+++ b/accountapp/templates/accountapp/listsnippets/navbar.html
@@ -18,26 +18,26 @@
     font-weight: 600;
 }
 #account-list-navbar .icon-star1 {
-    left: 28%;
+    left: 25%;
     top:-2.2rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #fdebb4;
     transform: rotate(-45deg);
 }
 
 #account-list-navbar .icon-star2 {
-    left: 49%;
+    left: 48.5%;
     top: 3.7rem;
-    font-size: 1.1rem;
+    font-size: 0.9rem;
     color: #ffdf80;
     transform: rotate(-25deg);
 }
 
 
 #account-list-navbar .icon-star3 {
-    right: 0;
+    right: 0.3rem;
     top: -1.3rem;
-    font-size: 1rem;
+    font-size: 0.8rem;
     color: #fdebb4;
     transform: rotate(-13deg);
 }
@@ -52,7 +52,7 @@
 #account-list-navbar  .btn-untouched,
 #account-list-navbar  .btn-touched{
     z-index:99;
-    width: 45%;
+    width: 44%;
     height: 4rem;
     border-radius: var(--border-radius-btn);
     background: var(--blackgray);
