--- a/homescreenapp/templates/homescreenapp/introsnippets/navbar.html
+++ b/homescreenapp/templates/homescreenapp/introsnippets/navbar.html
@@ -18,7 +18,7 @@
     #homescreen-intro-navbar .text-logo-xoxo {
         font-size: 2.6rem;
         font-weight: var(--fontweight-bold);
-        color: #ffe299; /*var(--whitepink)*/
+        color: #f8bfd1; /*var(--formtheme)*/
         padding-left: 0.5rem;
     }
     #homescreen-intro-navbar .text-introduce {
@@ -37,15 +37,15 @@
     #homescreen-intro-navbar .icon-star1 {
         right: 20%;
         top:-0.5rem;
-        font-size: 2.1rem;
-        color: #fdebb4;
+        font-size: 1.9rem;
+        color: #fef2cd;
         transform: rotate(-45deg);
     }
     #homescreen-intro-navbar .icon-star2 {
         right: 10%;
         top:1.5rem;
         font-size: 1.3rem;
-        color:#fdf7e3;
+        color:#feebb4;
         transform: rotate(-25deg);
     }
 
@@ -53,7 +53,7 @@
         left: 40%;
         top:-3rem;
         font-size: 1.6rem;
-        color: #f7e3a1;
+        color: #fef2cd;
         transform: rotate(18deg);
     }
     #homescreen-intro-navbar .icon-star4 {
@@ -121,8 +121,8 @@
     #homescreen-intro-navbar .link .text-link{
         font-size:var(--fontsize-title);
         font-weight:var(--fontweight-content);
-        color:#ffe299;/*var(--whitepink)*/
-        text-decoration-color:#ffe299;/*var(--whitepink)*/
+        color:#f8bfd1;/*var(--formtheme)*/
+        text-decoration-color:#f8bfd1;/*var(--formtheme)*/
         text-decoration-thickness: 2px;
         margin-right:0.8rem;
         margin-left:0;
