--- a/homescreenapp/templates/homescreenapp/introsnippets/review.html
+++ b/homescreenapp/templates/homescreenapp/introsnippets/review.html
@@ -1,8 +1,7 @@
 <style>
     #homescreen-homescreen-review{
-        background:#e9ecfb;
+        background: #e9ecfb;
     }
-
     #homescreen-homescreen-review .container{
         margin-top:3.5rem;
         padding:1.5rem var(--padding-content);
@@ -96,7 +95,7 @@
     }
 </style>
 
-<div class="frame-homescreen tema-blue" id="homescreen-homescreen-review" >
+<div class="frame-homescreen theme-blue" id="homescreen-homescreen-review" >
     <div class="decoration decoration-top"></div>
     <div class="decoration decoration-middle"></div>
     <span class="text-title-bold">많은 사람들이 From.XoXo와 <br>함께 추억을 만들어 나가요!</span>
