--- a/homescreenapp/templates/homescreenapp/introsnippets/save.html
+++ b/homescreenapp/templates/homescreenapp/introsnippets/save.html
@@ -69,7 +69,7 @@
     }
 </style>
 
-<div class="frame-homescreen tema-yellow" id="homescreen-intro-save" >
+<div class="frame-homescreen theme-yellow" id="homescreen-intro-save" ><!--theme yellow -->
     <div class="decoration decoration-top"></div>
     <div class="decoration decoration-bottom"></div>
     <span class="text-title-bold">새로운 편지를 받으셨나요?<br>삭제되지 않게 저장하세요!</span>
