--- a/homescreenapp/templates/homescreenapp/introsnippets/step.html
+++ b/homescreenapp/templates/homescreenapp/introsnippets/step.html
@@ -71,7 +71,7 @@
     }
 </style>
 
-<div class="frame-homescreen" id="homescreen-intro-step" >
+<div class="frame-homescreen theme-pink" id="homescreen-intro-step" >
     <div class="decoration decoration-top"></div>
     <div class="decoration decoration-bottom"></div>
     <span class="text-title-bold">소중한 사람에게 센스있는<br>나만의 편지를 선물해 보세요</span>
