--- a/letter_quizapp/templates/letter_quizapp/quizsnippets/choice.html
+++ b/letter_quizapp/templates/letter_quizapp/quizsnippets/choice.html
@@ -84,8 +84,8 @@
     <div id="container-choice" class="container-choice">
         <form  style="width: 0; height: 0" action="{% url 'letter_quizapp:verify' pk=target_quiz.pk %}" method="post">
             {% csrf_token %}{% bootstrap_form form %}
-            <input type="submit" class="btn-submit-fixed" {% if target_quiz.next_quiz %} value="편지 확인하기"
-            {% else %} value="다음 질문으로" {% endif %}>
+            <input type="submit" class="btn-submit-fixed" {% if target_quiz.next_quiz %} value="다음 질문으로"
+            {% else %} value="편지 확인하기" {% endif %}>
         </form>
             <div class="spacing-item">
                 <div class="item-choice">
