--- a/letter_quizapp/templates/letter_quizapp/quizsnippets/question.html
+++ b/letter_quizapp/templates/letter_quizapp/quizsnippets/question.html
@@ -9,7 +9,7 @@
     #letter_quiz-quiz-question .text-quiz{
         font-size: inherit;
         font-weight: var(--fontweight-bold);
-        color: var(--middlepink);
+        color: var(--maintheme);
         margin-right: 0.5rem;
     }
     #letter_quiz-quiz-question .spacing-title {
@@ -28,7 +28,7 @@
         position: relative;
         object-fit: cover;
         border-radius: var(--border-radius-container);
-        border:1.5px solid var(--borderpink);
+        border:1.5px solid var(--bordertheme);
         box-shadow: var(--shadow-container);
     }
     #letter_quiz-quiz-question .image-quiz {
