--- a/letterapp/templates/letterapp/createsnippets/post.html
+++ b/letterapp/templates/letterapp/createsnippets/post.html
@@ -89,5 +89,4 @@
         return true;
     }
 </script>
-<script src="{% static 'js/alert' %}"></script>
-<script src="{% static 'js/alertMessage.js' %}"></script>
+<script src="{% static 'js/alert.js' %}"></script>
