--- a/letterapp/templates/letterapp/intro.html
+++ b/letterapp/templates/letterapp/intro.html
@@ -18,7 +18,10 @@
         font-weight:var(--fontweight-bold);
     }
 
-
+.theme-christmas #letter-intro .icon-star2,
+.theme-christmas #letter-intro .icon-star1 {
+        display: none;
+    }
 </style>
 
 
