--- a/templates/head.html
+++ b/templates/head.html
@@ -52,5 +52,5 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/header.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/frame.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/tema.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/theme.css' %}">
 </head>
