--- a/templates/headersnippets/logo.html
+++ b/templates/headersnippets/logo.html
@@ -26,10 +26,10 @@
 }
 .text-logo-bold{
     font-size: 2rem;
-    color:var(--middlepink);
+    color:var(--maintheme);
     font-weight: inherit;
     margin-left: 0.2rem;
-    text-shadow: 0 0 1px var(--middlepink);
+    text-shadow: 0 0 1px var(--maintheme);
 }
 
 </style>
