--- a/templates/snippets/progress.html
+++ b/templates/snippets/progress.html
@@ -65,7 +65,7 @@
         <span class="text-content text-detail">
             {% if target_content.saved_at %}
                 저장
-                <span style="font-weight:inherit; font-size: inherit; color: var(--middlepink)">
+                <span style="font-weight:inherit; font-size: inherit; color: var(--maintheme)">
                     {{ target_content.saved_at|date:"H:i:s" }}
                 </span>
             {% else %}
