--- a/letter_contentapp/templates/letter_contentapp/update.html
+++ b/letter_contentapp/templates/letter_contentapp/update.html
@@ -40,7 +40,7 @@
     }
 
 
-    #letter_content-update #field-tema {
+    #letter_content-update #field-theme {
         width: 60%;
     }
 
@@ -64,7 +64,7 @@
 
     #letter_content-update .circle-middle {
         left: 6.3rem;
-        background: var(--borderpink);
+        background: var(--bordertheme);
     }
 
 
@@ -72,7 +72,7 @@
         #letter_content-update #field-content{
             height: 20rem;
         }
-        #letter_content-update #field-tema {
+        #letter_content-update #field-theme {
             width: 55%;
         }
     }
@@ -122,22 +122,23 @@
 <script>
 
     document.addEventListener('DOMContentLoaded', function() {
-        var bodyTema = document.getElementById('bodyTema');
-        var temaField = document.getElementById('field-tema');
+        var bodyTheme = document.getElementById('bodyTheme');
+        var themeField = document.getElementById('field-theme');
 
-        temaField.addEventListener('change', function() {
-            // Define a function to update the tema classes
-            function updateTemaClasses(element) {
-                // Remove all tema-related classes
-                element.classList.remove('tema-blue', 'tema-pink', 'tema-gray', 'tema-yellow', 'tema-green', 'tema-purple');
+        themeField.addEventListener('change', function() {
+            // Define a function to update the theme classes
+            function updateThemeClasses(element) {
+                // Remove all theme-related classes
+                element.classList.remove('theme-blue', 'theme-pink', 'theme-gray',
+                    'theme-yellow', 'theme-green', 'theme-purple','theme-christmas');
 
-                // Add the selected tema class
-                var selectedTema = 'tema-' + temaField.value;
-                element.classList.add(selectedTema);
+                // Add the selected theme class
+                var selectedTheme = 'theme-' + themeField.value;
+                element.classList.add(selectedTheme);
             }
 
             // Update classes for both elements
-            updateTemaClasses(bodyTema);
+            updateThemeClasses(bodyTheme);
         });
     });
 
