--- a/letter_quizapp/templates/letter_quizapp/quizsnippets/word.html
+++ b/letter_quizapp/templates/letter_quizapp/quizsnippets/word.html
@@ -12,8 +12,8 @@
     <form action="{% url 'letter_quizapp:verify' pk=target_quiz.pk %}"
           method="post">
         {% csrf_token %}{% bootstrap_form form %}
-        <input type="submit" class="btn-submit-fixed" {% if target_quiz.next_quiz %} value="편지 확인하기"
-        {% else %} value="다음 질문으로" {% endif %}>
+        <input type="submit" class="btn-submit-fixed" {% if target_quiz.next_quiz %} value="다음 질문으로"
+        {% else %} value="편지 확인하기" {% endif %}>
     </form>
     <div id="item-count" class="item-count">
         <span class="text-content-bold">답 {{ target_quiz.answer_count }} 글자</span>
