--- a/letterapp/templates/letterapp/createsnippets/guide.html
+++ b/letterapp/templates/letterapp/createsnippets/guide.html
@@ -10,7 +10,7 @@
     }
     #letter-create-guide  .icon {
         font-size: 1.6rem;
-        color: var(--middlepink);
+        color: var(--maintheme);
         font-weight: var(--fontweight-bold);
         margin-right: 1rem;
     }
