--- a/letterapp/templates/letterapp/resultsnippets/resetguide.html
+++ b/letterapp/templates/letterapp/resultsnippets/resetguide.html
@@ -3,7 +3,7 @@
 
 #frame-guide .icon-down {
     font-size: 2rem;
-    color: var(--middlepink);
+    color: var(--maintheme);
     font-weight: var(--fontweight-bold);
     margin-right: 1rem;
 }
