--- a/static/css/variable.css
+++ b/static/css/variable.css
@@ -3,14 +3,9 @@
 :root {
     --black:#333333;
     --white:white;
-    --softpink:#f2b5ca;
-    --borderpink:#ebdbe0;
-    --lightpink:#fceef2;
-    --middlepink:#e87d8f;
-    --gray:#7b7477;
     --softgray:#b4b1b2;
     --whitegray:#f3f2f2;
-    --whitepink:#fefbfc;
+    --gray:#666666;
     --blackgray:#5c5c5c;
     --red:#e46967;
     --green:#7ec897;
@@ -30,10 +25,10 @@
     --fontweight-bold:600;
 
 
-    --border-container:1.5px solid var(--borderpink);
+    --border-container:1.5px solid var(--bordertheme);
     --border-btn:1.5px solid #636363;
 
-    --shadow-container:0px 3px 13px var(--borderpink);
+    --shadow-container:0px 3px 13px var(--bordertheme);
     --shadow-container-dark:0px 3px 13px var(--blackgray);
     --shadow-btn-dark:0px 3px 10px #c7c8cc;
     --shadow-btn-white:0px 3px 10px #404040;
