--- a/homescreenapp/templates/homescreenapp/introsnippets/review.html
+++ b/homescreenapp/templates/homescreenapp/introsnippets/review.html
@@ -1,6 +1,6 @@
 <style>
     #homescreen-homescreen-review{
-        background: #e9ecfb;
+        background: transparent;/*background: #e9ecfb;*/
     }
     #homescreen-homescreen-review .container{
         margin-top:3.5rem;
@@ -61,15 +61,15 @@
 <style>
 
     #homescreen-homescreen-review .decoration-top {
-        background: #e3e7fc;
-        width: 27%;
-        height: 13%;
+        background: #fdf2f5;/*background: #e3e7fc;*/
+        width: 25%;/*width: 27%;height: 13%;*/
+        height: 11%;
         border-bottom-left-radius: 100% 100%;
         right: 0;
         top: 0%;
     }
     #homescreen-homescreen-review .decoration-middle{
-        background:#e3e7fc;
+        background:#fdf2f5;
         border-top-right-radius: 100% 50%;
         border-bottom-right-radius: 100% 50%;
         left: 0;
@@ -95,7 +95,7 @@
     }
 </style>
 
-<div class="frame-homescreen theme-blue" id="homescreen-homescreen-review" >
+<div class="frame-homescreen" id="homescreen-homescreen-review" >
     <div class="decoration decoration-top"></div>
     <div class="decoration decoration-middle"></div>
     <span class="text-title-bold">많은 사람들이 From.XoXo와 <br>함께 추억을 만들어 나가요!</span>
