--- a/homescreenapp/templates/homescreenapp/introsnippets/navbar.html
+++ b/homescreenapp/templates/homescreenapp/introsnippets/navbar.html
@@ -18,7 +18,7 @@
     #homescreen-intro-navbar .text-logo-xoxo {
         font-size: 2.6rem;
         font-weight: var(--fontweight-bold);
-        color: #f8bfd1; /*var(--formtheme)*/
+        color: #b8bbe0; /*var(--formtheme)*/
         padding-left: 0.5rem;
     }
     #homescreen-intro-navbar .text-introduce {
@@ -121,8 +121,8 @@
     #homescreen-intro-navbar .link .text-link{
         font-size:var(--fontsize-title);
         font-weight:var(--fontweight-content);
-        color:#f8bfd1;/*var(--formtheme)*/
-        text-decoration-color:#f8bfd1;/*var(--formtheme)*/
+        color:#b8bbe0;/*var(--formtheme)*/
+        text-decoration-color:#b8bbe0;/*var(--formtheme)*/
         text-decoration-thickness: 2px;
         margin-right:0.8rem;
         margin-left:0;
