--- a/homescreenapp/templates/homescreenapp/introsnippets/footer.html
+++ b/homescreenapp/templates/homescreenapp/introsnippets/footer.html
@@ -80,9 +80,9 @@ footer .text-copyright{
                  class="link-etc">버그제보</a>
         </div>
         <div class="container-footer">
-              <div class="text-buisinessinfo">From.XoXo 사업자 정보</div>
+              <div class="text-buisinessinfo">From.XoXo 서비스 정보</div>
               <div class="text-buisinessdetail">
-                    fromxoxo1352@gmail.com / 상호명 : 프롬쏘쏘 / 대표자명 : 조경연 / 책임자 : 조경연, 김재욱 / 0507-0178-1539
+                    상호명: 프롬쏘쏘, 문의 및 제보 사항: peter135268@gmail.com, 프로덕트 개발자: CKY
               </div>
         </div>
   </div>
