--- a/homescreenapp/templates/homescreenapp/introsnippets/step.html
+++ b/homescreenapp/templates/homescreenapp/introsnippets/step.html
@@ -2,7 +2,7 @@
 
 
     #homescreen-intro-step{
-        background: transparent;/*background: #fbe9ef*/
+        background: #fbe9ef/*background:transparent;*/
     }
     #homescreen-intro-step .container{
         display: flex;
@@ -36,16 +36,15 @@
 <style>
     
     #homescreen-intro-step .decoration-top {
-        /*background: #fdf2f5;*/
-        background:#f2f4fd;
-        width: 25%; /*width: 34%;height: 23%;*/
+        background:#fdf2f5;/*background: #f2f4fd;*/
+        width: 25%;
         height: 18%;
         border-bottom-left-radius: 100% 100%;
         right: 0;
         top: 0%;
     }
     #homescreen-intro-step .decoration-bottom{
-        background:#f2f4fd;
+        background:#fdf2f5;/*background: #f2f4fd;*/
         border-top-right-radius: 100% 100%;
         left: 0;
         bottom: 0%;
@@ -72,7 +71,7 @@
     }
 </style>
 
-<div class="frame-homescreen " id="homescreen-intro-step" >
+<div class="frame-homescreen theme-pink " id="homescreen-intro-step" >
     <div class="decoration decoration-top"></div>
     <div class="decoration decoration-bottom"></div>
     <span class="text-title-bold">소중한 사람에게 센스있는<br>나만의 편지를 선물해 보세요</span>
