--- a/templates/head.html
+++ b/templates/head.html
@@ -1,5 +1,15 @@
 {% load static%}
 <head xmlns="http://www.w3.org/1999/html">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KX80X1KBZ2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-KX80X1KBZ2');
+    </script>
+
     <meta charset="UTF-8">
     <meta property="og:title" content="From.XoXo">
     <meta property="og:type" content="website">
