--- a/homescreenapp/templates/homescreenapp/introsnippets/save.html
+++ b/homescreenapp/templates/homescreenapp/introsnippets/save.html
@@ -1,7 +1,7 @@
 {% load static %}
 <style>
     #homescreen-intro-save{
-        background: transparent;/*background: #fbf5e9;*/
+        background: #fbf5e9;/*background: transparent;*/
     }
 
     #homescreen-intro-save .container{
@@ -36,15 +36,15 @@
 <style>
 
     #homescreen-intro-save .decoration-top {
-        background:#f2f4fd;/*background:#fdf9f2;*/
+        background:#fdf9f2;/*background:#f2f4fd;*/
         width: 25%;
-        height: 21%;/*width: 34%;height: 23%;*/
+        height: 21%;
         border-bottom-right-radius: 100% 100%;
         left: 0;
         top: 0;
     }
     #homescreen-intro-save .decoration-bottom{
-        background:#fdf2f5;
+        background:#fdf9f2;/*background:#f2f4fd;*/
         border-top-left-radius: 100% 100%;
         right: 0;
         bottom: 0;
@@ -69,7 +69,7 @@
     }
 </style>
 
-<div class="frame-homescreen " id="homescreen-intro-save" ><!--theme yellow -->
+<div class="frame-homescreen theme-yellow" id="homescreen-intro-save" ><!--theme yellow -->
     <div class="decoration decoration-top"></div>
     <div class="decoration decoration-bottom"></div>
     <span class="text-title-bold">새로운 편지를 받으셨나요?<br>삭제되지 않게 저장하세요!</span>
