--- a/accountapp/templates/accountapp/settingsnippets/info.html
+++ b/accountapp/templates/accountapp/settingsnippets/info.html
@@ -8,7 +8,7 @@
 </style>
 <div class="frame" id="account-setting-info">
     <div class="spacing-title">
-        <span class="text-title-bold">계정 정보</span>
+        <span class="text-title-bold">사용자 정보</span>
     </div>
     <div class="container">
         <div class="spacing-horizontal">
