--- a/accountapp/templates/accountapp/create.html
+++ b/accountapp/templates/accountapp/create.html
@@ -34,7 +34,7 @@
 <main>
     <div class="frame" id="account-create">
         <div class="container-form">
-            <form action="{% url 'accountapp:create' pk=target_verification.pk %}" method="post">
+            <form action="{% url 'accountapp:create' pk=target_verification.pk %}" method="post"z>
                 <div class="checkbox-unchecked material-icons" id="custom-checkbox-label">
                     <span class="material-icons icon-check">check</span>
                 </div>
